--- a/android/build.gradle
+++ b/android/build.gradle
@@ -9,7 +9,7 @@ buildscript {
     }
 
     dependencies {
-        classpath 'com.android.tools.build:gradle:8.12.0'
+        classpath 'com.android.tools.build:gradle:8.13.0'
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
     }
 }
@@ -29,7 +29,7 @@ android {
         namespace 'io.objectbox.objectbox_flutter_libs'
     }
 
-    compileSdkVersion 31
+    compileSdk 36
 
     compileOptions {
         sourceCompatibility JavaVersion.VERSION_21
